Add backend FastAPI with a healthcheck route

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,60 @@
-node_modules/
-
-.vscode
-
 .idea
+.ipynb_checkpoints
+.mypy_cache
+.vscode
+backend/.venv
+__pycache__
+.pytest_cache
+htmlcov
+dist
+site
+.coverage*
+coverage.xml
+.netlify
+test.db
+log.txt
+Pipfile.lock
+env3.*
+env
+docs_build
+site_build
+venv
+docs.zip
+archive.zip
 
-.venv
+# vim temporary files
+*~
+.*.sw?
+.cache
+
+# macOS
+.DS_Store
+
+
+frontend/node_modules/
+backend/database.db
+backend/.env
+
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+frontend/tests/__screenshots__/
