--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,10 @@
-fastapi[standard]~=0.115.6
-
-starlette~=0.41.3
-python-jose~=3.3.0
-passlib~=1.7.4
-pydantic~=2.10.5
+fastapi[all]~=0.115.6
+uvicorn~=0.34.0
+bcrypt
+cryptography
+python-jose
+python-multipart
 SQLAlchemy~=2.0.37
+passlib~=1.7.4
+python-dotenv~=1.0.1
+pydantic~=2.10.5
